letter-spacing in cover_title corrected

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .header {
   padding: 92px 49px 92px 51px;
   display: grid;
-  grid-template-columns: 1fr 148px 1fr;
+  grid-template-columns: 1fr 138px 1fr;
   align-items: center;
 }
 
@@ -30,7 +30,11 @@
 
 .header__logo {
   display: block;
-  width: 148px;
+  width: 138px;
+}
+
+.header__logo-image {
+  width: 100%;
 }
 
 .header__address {
@@ -50,7 +54,7 @@
 }
 
 .cover {
-  padding: 165px 50px 62px 50px;
+  padding: 165px 50px 50px 50px;
   position: relative;
   z-index: -2;
   background-image: url(/images/cover.jpg);
@@ -71,6 +75,9 @@
 }
 
 .cover__title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   font-size: 100px;
   font-weight: 700;
   line-height: 1.15;
@@ -84,14 +91,20 @@
 
 .aligned-text_center {
   text-align: center;
+  line-height: 1;
 }
 
 .aligned-text_right {
   text-align: right;
+  line-height: 1;
 }
 
 .letter-spacing-extended {
   letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
 }
 
 .cover__description {
@@ -102,7 +115,7 @@
 }
 
 .cover__description-text {
-  word-spacing: 17px;
+  word-spacing: 18px;
   text-align: center;
   font-size: 22px;
   font-weight: 400;
